--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,9 +46,8 @@ set(EXAMPLEB1_SCRIPTS
   exampleB1.in
   exampleB1.out
   init_vis.mac
-  run1.mac
-  run2.mac
-  vis.mac
+        run.mac
+        vis.mac
   )
 
 foreach(_script ${EXAMPLEB1_SCRIPTS})
